--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
    
     <br>
     <br>
-    <a href="https://theerin-680710804.w3spaces.com/aboutme.html#theerin">About me</a>
+    <a href="page/aboutme.html">About me</a>
     
     <br><br>
     
